# ailedger

./: .gitignore  CHARTER.md  LICENSE  README.md  privacy_policy.txt  record-demo.sh  wrangler.jsonc
.github/workflows/: claude.yml  deploy.yml
.reviews/7nj42/: commit-discipline-findings.md  correctness-findings.md  resilience-findings.md  smells-findings.md  style-findings.md
charter-repo-staging/: ACCESS.md  CHARTER.md  LICENSE  README.md  SETUP.md  STANDARDS.md
cli/: README.md  pyproject.toml
cli/src/ailedger_cli/: __init__.py  __main__.py  api.py  attest.py  config.py  export.py  main.py  verify.py
cli/tests/: conftest.py  test_api.py  test_attest.py  test_cli.py  test_config.py  test_export.py  test_verify.py
clients/dogfeed-sidecar/: README.md  install.sh
contractor-auth/: README.md  SECURITY.md  package-lock.json  package.json  wrangler.jsonc
contractor-auth/src/: ratelimit.js  worker.js
contractor-dash/: .env.example  .env.jake  .env.pasha  .env.staging-pasha  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
contractor-dash/public/: _redirects
contractor-dash/src/: App.tsx  config.ts  index.css  main.tsx
contractor-webui-api/: .gitignore  README.md  requirements.txt
contractor-webui-api/app/: auth.py  config.py  docs.py  inbox.py  jo.py  main.py
contractor-webui-api/contractors/: pasha-staging.env.example  pasha.env.example
contractor-webui-api/systemd/: contractor-webui-api@.service
contractor-webui-api/tests/: test_inbox_filter.py  test_jo_today_digest.py
dashboard/: index.html  package-lock.json  package.json  wrangler.toml
dashboard/public/: llms.txt
dashboard/src/: App.css  App.tsx  index.css  supabase.ts  useTheme.ts
detection/: .gitignore  LICENSE  README.md  pyproject.toml
detection/src/ailedger_detection/: __init__.py  disparate_impact.py  drift.py  parity.py
detection/tests/: test_disparate_impact.py
docs/: attest.md  deploy-runbook.md  open-positions.md  pasha-welcome.md  staging-pasha-provisioning.md  staging-provisioning.md
docs/adr/: 015-dogfeed-sidecar-pattern.md
docs/blog/: 2026-04-jcs-adoption.md
docs/sub-town/: pasha-1password-vault.md  pasha-activation-day1.md  pasha-brevo-sender-domain.md  pasha-day1-dns-mailbox.md
john-console/: README.md  john-persona.md  package.json  wrangler.jsonc
john-console/public/: index.html
john-console/src/: worker.js
landing/: CHARTER-PAGE-STAGING.md  SEO-RUNBOOK.md  index.html  package-lock.json  wrangler.toml
landing/public/: _redirects  charter.html  llms.txt  robots.txt  sitemap.xml
landing/src/: App.tsx  index.css
onboard-auth/: README.md  package.json  schema.sql  wrangler.jsonc
onboard-auth/public/: login.html
onboard-auth/src/: audit.js  csrf.js  db.js  worker.js
proxy/: CHANGELOG.md  package-lock.json  package.json  schema.sql  vitest.config.mts  worker-configuration.d.ts  wrangler.jsonc
proxy/migrations/: 001_upstream_key_index.sql  20260418_account_settings_delete_policy.sql  20260418_account_settings_delete_repro.sql  20260418_api_keys_system_id_set_null.sql  20260418_tamper_evident_chain.sql  (+14 more)
redirect/: package-lock.json  package.json  wrangler.jsonc
sdk/: README.md  package.json  tsconfig.json
(+67 files in other folders)
