[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ailedger-cli"
version = "0.1.0"
description = "Command-line companion for AILedger: verify hash-chains and export Article 12 compliance reports."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Joyner Ventures LLC" }]
keywords = ["ailedger", "ai-act", "compliance", "audit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]
dependencies = [
  "click>=8.1",
  "httpx>=0.27",
  "reportlab>=4.0",
]

[project.optional-dependencies]
keyring = ["keyring>=24"]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
]

[project.scripts]
ailedger = "ailedger_cli.main:cli"

[project.urls]
Homepage = "https://ailedger.dev"
Source = "https://github.com/jakejjoyner/ailedger"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
